crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_swift_references.snap
---
source: crates/nestweaver-parser/src/parse.rs
assertion_line: 9041
expression: "parsed_references(\"simple.swift\", &source)"
---
- name: Foundation
  kind: Import
  start_line: 1
  context: import Foundation
  receiver: ~
- name: Greeter
  kind: Extends
  start_line: 7
  context: "class SimpleGreeter: Greeter {"
  receiver: ~
- name: SimpleGreeter
  kind: Call
  start_line: 28
  context: let greeter = SimpleGreeter()
  receiver: ~
- name: AppConfig
  kind: Call
  start_line: 29
  context: let config = AppConfig()
  receiver: ~
- name: greet
  kind: Call
  start_line: 30
  context: "let result = greeter.greet(name: config.defaultName)"
  receiver: greeter
- name: print
  kind: Call
  start_line: 31
  context: print(result)
  receiver: ~
