crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_swift_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
expression: "parsed_symbols(\"simple.swift\", &source)"
---
- name: Greeter
  kind: Interface
  start_line: 3
  end_line: 5
  signature: "protocol Greeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: SimpleGreeter
  kind: Class
  start_line: 7
  end_line: 15
  signature: "class SimpleGreeter: Greeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: greet
  kind: Method
  start_line: 8
  end_line: 10
  signature: "func greet(name: String) -> String {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: String
  parent_name: SimpleGreeter
- name: formatName
  kind: Method
  start_line: 12
  end_line: 14
  signature: "private func formatName(_ name: String) -> String {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: String
  parent_name: SimpleGreeter
- name: AppConfig
  kind: Class
  start_line: 17
  end_line: 19
  signature: "struct AppConfig {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: defaultName
  kind: Property
  start_line: 18
  end_line: 18
  signature: "let defaultName: String = \"World\""
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: Priority
  kind: Class
  start_line: 21
  end_line: 25
  signature: "enum Priority {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: low
  kind: Constant
  start_line: 22
  end_line: 22
  signature: case low
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: medium
  kind: Constant
  start_line: 23
  end_line: 23
  signature: case medium
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: high
  kind: Constant
  start_line: 24
  end_line: 24
  signature: case high
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
- name: main
  kind: Function
  start_line: 27
  end_line: 32
  signature: "func main() {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: Main
  visibility: Inferred
  type_info: ~
  parent_name: ~
