crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_ts_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
expression: "parsed_symbols(\"simple.ts\", &source)"
---
- name: Greeter
  kind: Interface
  start_line: 3
  end_line: 6
  signature: "interface Greeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
- name: greet
  kind: Method
  start_line: 4
  end_line: 4
  signature: "greet(name: string): string"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: string
- name: farewell
  kind: Method
  start_line: 5
  end_line: 5
  signature: "farewell(name: string): string"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: string
- name: Logger
  kind: Interface
  start_line: 8
  end_line: 10
  signature: "interface Logger {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
- name: log
  kind: Method
  start_line: 9
  end_line: 9
  signature: "log(message: string): void"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: void
- name: ConsoleGreeter
  kind: Class
  start_line: 12
  end_line: 24
  signature: "class ConsoleGreeter implements Greeter, Logger {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
- name: greet
  kind: Method
  start_line: 13
  end_line: 15
  signature: "greet(name: string): string {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: string
- name: farewell
  kind: Method
  start_line: 17
  end_line: 19
  signature: "farewell(name: string): string {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: string
- name: log
  kind: Method
  start_line: 21
  end_line: 23
  signature: "log(message: string): void {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: void
- name: VerboseGreeter
  kind: Class
  start_line: 26
  end_line: 31
  signature: "class VerboseGreeter extends ConsoleGreeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
- name: greet
  kind: Method
  start_line: 27
  end_line: 30
  signature: "greet(name: string): string {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: string
- name: createGreeter
  kind: Function
  start_line: 33
  end_line: 35
  signature: "function createGreeter(): Greeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: Greeter
- name: greeter
  kind: Constant
  start_line: 37
  end_line: 37
  signature: const greeter = createGreeter();
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
