crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_vue_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
expression: "parsed_symbols(\"simple.vue\", &source)"
---
- name: formatName
  kind: Function
  start_line: 12
  end_line: 14
  signature: "export function formatName(name) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: simple
  kind: Class
  start_line: 16
  end_line: 31
  signature: "export default defineComponent({"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: EventListener
  visibility: Public
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: handleClick
  kind: Function
  start_line: 25
  end_line: 27
  signature: "function handleClick() {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: EventListener
  visibility: Private
  type_info: ~
  parent_name: ~
  scope_chain: ~
