crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_zig_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
expression: "parsed_symbols(\"simple.zig\", &source)"
---
- name: std
  kind: Constant
  start_line: 1
  end_line: 1
  signature: "const std = @import(\"std\");"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
- name: math
  kind: Constant
  start_line: 2
  end_line: 2
  signature: "const math = @import(\"math.zig\");"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
- name: SensorKind
  kind: Class
  start_line: 4
  end_line: 4
  signature: "pub const SensorKind = enum {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: SensorConfig
  kind: Class
  start_line: 10
  end_line: 10
  signature: "pub const SensorConfig = struct {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: InternalState
  kind: Class
  start_line: 16
  end_line: 16
  signature: "const InternalState = union {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
- name: initialize
  kind: Function
  start_line: 21
  end_line: 21
  signature: "pub fn initialize(config: SensorConfig) void {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: calibrate
  kind: Function
  start_line: 26
  end_line: 26
  signature: "fn calibrate(config: SensorConfig) void {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
- name: main
  kind: Function
  start_line: 30
  end_line: 30
  signature: "pub fn main() !void {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: Main
  visibility: Public
  type_info: ~
- name: config
  kind: Constant
  start_line: 31
  end_line: 31
  signature: "const config = SensorConfig{"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
